--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 </div>
 
 
-                <a href="/src/pages/erp.html" class="block text-black justify-between items-center p-1 font-semibold">
+                <a href="/src/pages/lob.html" class="block text-black justify-between items-center p-1 font-semibold">
                     Business
                 </a>
                 <hr class="border-t-2 border-dotted border-green-600 w-full mx-auto my-6" />
