--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
                 <div class="hidden lg:flex flex-grow justify-end items-center">
                     <!-- <a href="#" class="relative hover:text-green-800 font-extrabold"><i class="fa fa-cart-arrow-down text-2xl" aria-hidden="true"></i></a> -->
-                    <a href="#" class="inline-block bg-green-800 text-white font-bold py-2 px-4 rounded hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-800 focus:ring-opacity-75">
+                    <a href="https://calendly.com/purusottamchoudhurymca" target="_blank" class="inline-block bg-green-800 text-white font-bold py-2 px-4 rounded hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-800 focus:ring-opacity-75">
                         Book a Meeting
                     </a>
                 </div>
