--- a/src/pages/faq.html
+++ b/src/pages/faq.html
@@ -415,7 +415,7 @@
                     class="border-b-gray-200 bg-gray-200 text-black p-12 mb-4 rounded-md"
                   >
                     You can contact us via our website's contact form, email us
-                    at info@liveosoft.com, or call us at [insert phone number].
+                    at info@liveosoft.com, or call us at +91 859-692-5810.
                   </p>
                 </div>
               </div>
