--- a/index.html
+++ b/index.html
@@ -886,8 +886,8 @@
         <div class="container mx-auto py-20 flex flex-col md:flex-row justify-between space-y-2 md:space-y-0 md:space-x-8 px-4 max-w-7xl">
             <!-- Left Column: Logo and Social Media -->
             <div class="w-full md:w-1/3 flex flex-col items-center md:items-start text-center md:text-left">
-                <img src="/src/assets/Images/HomePage/Hero/logo.png" alt="Theliveosoft logo" class="w-60 h-30 mb-2" />
-                <p class="text-sm font-bold text-yellow-400 mb-2">ESTD 2024</p>
+                <!--<img src="/src/assets/Images/HomePage/Hero/logo.png" alt="Theliveosoft logo" class="w-60 h-30 mb-2" />
+                <p class="text-sm font-bold text-yellow-400 mb-2">ESTD 2024</p>-->
                 <h2 class="text-2xl font-bold mb-4 text-white">Liveosoft Technologies Pvt. Ltd.</h2>
                 <p class="text-white mb-6">
                     Empowering agriculture and hospitality through innovative technology solutions.
