--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -58,8 +58,8 @@
         </h2>
         <p class="text-lg text-gray-700 mb-6">
           Liveosoft Technologies was founded in 2024 with the vision of transforming the
-          livestock industry in India. Established by industry pioneers Mr. X,
-          Mr. Y, and Mr. Z, our company was born out of a shared passion for
+          livestock industry in India. Established by industry pioneer Mr.Tusar Mohanty,
+          our company was born out of a shared passion for
           leveraging technology to enhance livestock farming practices. Since
           our inception, Liveosoft has rapidly grown into a trusted name in the
           livestock sector, known for our commitment to quality, innovation, and
@@ -233,12 +233,12 @@
       </div>
     </section> -->
 
-    <section class="max-w-7xl mx-auto p-8 h-96x">
+    <section class="max-w-7xl mx-auto p-8 ">
       <h1 class="text-4xl font-bold text-center mb-8 text-green-700"> Our Team</h1>
       <div class="bg-green-700 rounded-lg shadow-lg h-full flex flex-col lg:flex-row md:flex-row items-center lg:items-start">
           <!-- Team Photo -->
-          <div class="lg:w-1/3 p-4 flex items-start justify-center ">
-              <img src="https://skillanto.com/img12/WhatsApp%20Image%202024-08-27%20at%2008.31.48_f8eac601.jpg " alt="Tusar Mohanty" class="object-contain h-64 w-96 rounded-lg">
+          <div class=" p-4 flex items-start justify-center ">
+              <img src="https://skillanto.com/img12/WhatsApp%20Image%202024-08-27%20at%2008.31.48_f8eac601.jpg " alt="Tusar Mohanty" class="object-center aspect-square max-h-64 rounded-lg">
           </div>
 
           <!-- Team Content -->
