--- a/src/pages/hospitalityService.html
+++ b/src/pages/hospitalityService.html
@@ -28,13 +28,13 @@
     <div id="header"></div>
     <!-- Hero Section -->
     <div
-      class="relative h-96 sm:h-80 sm:mt-24 md:h-96 lg:h-[60vh] bg-black bg-cover bg-center"
+      class="relative h-96 sm:h-80 sm:mt-24 md:h-96 lg:h-[60vh] bg-black/50 bg-cover bg-center"
       style="
-        background-image: url('https://images.pexels.com/photos/12512669/pexels-photo-12512669.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+        background-image: url('https://info.ehl.edu/hubfs/Singapore/EHL%20Campus%20(Singapore)_Faculty%20&%20Students%20Discussion%201.jpg');
       "
     >
       <div
-        class="flex flex-col justify-center items-center h-full px-4 text-center"
+        class="flex flex-col justify-center items-center h-full w-full bg-black/25 px-4 text-center"
       >
         <h1
           class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold text-white mb-2 sm:mb-4"
@@ -53,13 +53,13 @@
           Liveosoft Hospitality as a Service
         </h2>
         <p class="text-base sm:text-lg md:text-xl text-gray-700 mb-4 sm:mb-6">
-          Liveosoft Technologies offers a comprehensive Hospitality as a Service (HaaS)
-          platform tailored to streamline hospitality operations while elevating
-          guest experiences. Whether you're managing co-living spaces, hotels,
-          food and beverage services, or event planning, Liveosoft Technologies provides a
-          feature-packed solution designed for seamless management. From
-          optimizing resources to delivering high-quality services, our platform
-          ensures efficient hospitality management.
+          Liveosoft Technologies offers a comprehensive Hospitality as a Service
+          (HaaS) platform tailored to streamline hospitality operations while
+          elevating guest experiences. Whether you're managing co-living spaces,
+          hotels, food and beverage services, or event planning, Liveosoft
+          Technologies provides a feature-packed solution designed for seamless
+          management. From optimizing resources to delivering high-quality
+          services, our platform ensures efficient hospitality management.
         </p>
       </div>
     </section>
